# Main

./: .gitignore  App.jsx  README.md  countdown_timer.py  data_cleaner.py  data_downloader_placeholder.py  directory_tree_generator.py  find_extremes.py  game_3.py  game_4.py  game_5.py  game_body.py  number_guesser.py  plot_crimes_per_district.py  server.js  simple_markdown_to_html.py  yearly_trend_district.py
Project/: Take_a_pinpoint.py  apiServer.js  mountainStations.js  text  updateFirebaseWeather.js  물리적모델 규칙.text
capsulation/: module_1.py  module_10.py  module_2.py  module_3.py  module_6.py  module_7.py  module_8.py
example_simulation_results/: validation_report.json
exercise/: test1.py  test10.py  test11.py  test12.py  test4.py  test6.py  test8.py
game/: Cam.cs  HazardBox.cs  Player.cs  PointDisplayUI.cs  SimpleAI.cs  StartTrigger.cs
ljg/: caesar_cipher.py  contact_book_cli.py  file_organizer_by_ext.py  simple_calculator.py  simple_quiz_game.py  todo_list_cli.py  unit_converter.py
lsy/: ascii_name_art.py  calculator.py  cat_class_with_init.py  cat_str_method_demo.py  chat_log_summarizer.py  color_game_en.py  color_to_emotion.py  current_time.py  daily_focus_timer.py  daily_fortune.py  dungeon_main.py  dungeon_map.py  dungeon_player.py  emoji_emotion_detector.py  emoji_password_generator.py  even_odd_counter.py  fetch_users_api.py  file_sorter.py  find_max_value.py  funny_name_generator.py  habit_tracker.py  iqr_outlier_filter.py  list_python_files.py  magic_8ball.py  math_game_core.py  (+47 more)
test/Practice/firebase/C++/: CMakeLists.txt  README.md  main.cpp
(+493 files in other folders)
